Fixed the title on mobile.
Changed the title font size for tiny screens.

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ html {
 }
 
 body {
+    padding-top: 70px;
     background: #0d1116;
     overflow-x: hidden;
 }
@@ -56,7 +57,7 @@ section  {
     align-items: center;
     min-height: 10px;
     background: white;
-    color: 0d1116;
+    color: #0d1116;
 }
 
 section h1 {
@@ -163,5 +164,9 @@ a.page {
 
     .coloredone {
         margin-top: 4px;
+    }
+
+    section h1 {
+        font-size: 11vw;
     }
 }
